--- a/requirements.txt
+++ b/requirements.txt
@@ -7,13 +7,14 @@ blinker==1.9.0
 cachetools==6.2.6
 certifi==2026.2.25
 charset-normalizer==3.4.4
-click==8.3.1
+click==8.1.8
 colorama==0.4.6
 distro==1.9.0
 fastapi==0.134.0
 gitdb==4.0.12
 GitPython==3.1.46
 groq==1.0.0
+gTTS==2.5.4
 h11==0.16.0
 httpcore==1.0.9
 httpx==0.28.1
